# rust-tracker

./: .gitignore  AGENTS.md  Cargo.toml  README.md
packaging/: build-appimage.sh  build-deb.sh
resources/: rust-tracker.desktop  rust-tracker.xml
src/: app.rs  config.rs  main.rs  midi.rs  state.rs  undo.rs
src/app/: dialogs.rs  editors.rs  menu.rs  mod.rs
src/audio/: engine.rs  live_edit.rs  mod.rs  runtime.rs
src/module/: create.rs  edit.rs  edit.rs.bak  io.rs  mod.rs  sample.rs  save_mod.rs
src/ui/: disk_op.rs  instr_editor.rs  mod.rs  order_list.rs  pattern_editor.rs  sample_editor.rs  theme.rs  transport.rs  viz.rs
